--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Express</h1>
     <p>Welcome to Express with live reload</p>
-    <script src="components/jquery/index.js"></script>
+    <script src="components/jquery/jquery.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
