trying Grunt Tasks

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
     <h1>Express</h1>
     <p>Welcome to Express with live reload</p>
     <script src="components/jquery/jquery.js"></script>
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
